<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.ananada.addme.neutrinos.anandaguruji.RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:weightSum="2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <ImageView
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/new_logo" />

            <TextView
                android:id="@+id/enterDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_semibold"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/enter_your_details"
                android:textColor="@android:color/holo_orange_dark" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1.3"
            android:background="@color/transparent"
            android:orientation="vertical">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/appBackground"
                android:orientation="vertical"
                android:paddingBottom="@dimen/btn_to_terms"
                android:paddingLeft="@dimen/edt_tb_padding"
                android:paddingRight="@dimen/edt_tb_padding"
                android:paddingTop="@dimen/btn_to_terms">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_input_background"
                    android:orientation="vertical">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/reminder_padding"
                        android:focusedByDefault="true"
                        android:fontFamily="@font/open_sans_semibold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/personName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_to_input"
                        android:background="@drawable/login_input_background"
                        android:fontFamily="@font/open_sans_semibold"
                        android:hint="@string/name"
                        android:nextFocusForward="@+id/phoneNumber"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="@dimen/reg_text" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/dateofbirth"
                        android:layout_width="0dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.7"
                        android:background="@drawable/login_input_background"
                        android:fontFamily="@font/open_sans_semibold"
                        android:gravity="start"
                        android:hint="Select Date of birth"
                        android:nextFocusForward="@+id/phoneNumber"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">
                    <Spinner
                        android:id="@+id/mobile_spinner"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:layout_weight="0.6" />


                    <EditText
                        android:id="@+id/phoneNumber"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.4"
                        android:layout_marginTop="@dimen/text_to_input"
                        android:background="@drawable/login_input_background"
                        android:fontFamily="@font/open_sans_semibold"
                        android:hint="@string/mobile_number"
                        android:inputType="number"
                        android:maxLength="10"
                        android:nextFocusForward="@id/cityName"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="@dimen/reg_text" />

                </LinearLayout>
                <LinearLayout
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:layout_marginTop="5dp"
                        android:text="Select Gender" />

                    <RadioGroup
                        android:id="@+id/gender_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_input_background"
                        android:nextFocusForward="@+id/phoneNumber"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans_semibold"
                            android:padding="5dp"
                            android:singleLine="true"
                            android:text="Male"
                            android:textSize="15sp" />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="0dp"
                            android:layout_height="30dp"
                            android:layout_weight="1"
                            android:fontFamily="@font/open_sans_semibold"
                            android:text="Female"
                            android:textSize="15sp" />
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/cityName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_to_input"
                        android:background="@drawable/login_input_background"
                        android:fontFamily="@font/open_sans_semibold"
                        android:hint="@string/place"
                        android:nextFocusDown="@+id/btnRegistartion"
                        android:padding="5dp"
                        android:singleLine="true"
                        android:textSize="@dimen/reg_text" />

                </LinearLayout>

                <Button
                    android:id="@+id/btnRegistartion"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/text_to_input"
                    android:background="@drawable/login_btn_background"
                    android:fontFamily="@font/open_sans_semibold"
                    android:paddingLeft="@dimen/reminder_padding"
                    android:paddingRight="@dimen/reminder_padding"
                    android:text="@string/btnRegistrationText"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/app_eighteen_sp" />
            </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>


    <ImageView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:background="@color/appBackground"
        android:padding="10dp"
        android:src="@drawable/neutrinos_footer" />
</RelativeLayout>
